// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Token - Snapshot should render Token correctly with halo on default 1`] = `
<Fragment>
  <CirclePattern
    size="48"
    style={Object {}}
    testID="token"
  >
    <ImageBackground
      blurRadius={20}
      imageStyle={
        Object {
          "opacity": 0.5,
        }
      }
      source={
        Object {
          "uri": "https://cryptologos.cc/logos/usd-coin-usdc-logo.png",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 48,
        }
      }
      testID="token-halo"
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "https://cryptologos.cc/logos/usd-coin-usdc-logo.png",
          }
        }
        style={
          Object {
            "borderRadius": 15.36,
            "height": 30.72,
            "width": 30.72,
          }
        }
        testID="token-image"
      />
    </ImageBackground>
  </CirclePattern>
</Fragment>
`;

exports[`Token - Snapshot should render Token without if isHaloEnabled=false 1`] = `
<Fragment>
  <CirclePattern
    size="48"
    style={Object {}}
    testID="token"
  >
    <Image
      onError={[Function]}
      resizeMode="contain"
      source={
        Object {
          "uri": "https://cryptologos.cc/logos/usd-coin-usdc-logo.png",
        }
      }
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="token-image"
    />
  </CirclePattern>
</Fragment>
`;
